Fixed erroneous assertion in markdown comment.

--- a/nhl_exercise.ipynb
+++ b/nhl_exercise.ipynb
@@ -3622,13 +3622,13 @@
    "id": "745a4aef",
    "metadata": {},
    "source": [
-    "**It doesn't look like RBS:GS has remained relatively stable through all the seasons based on the box and violin plots. Let's run a smooth regression to see mean RBS:GS curve is indeed fairly flat.**"
+    "**It looks like RBS:GS has remained relatively stable through all the seasons based on the box and violin plots. We will run a smooth regression to observe if the mean RBS:GS curve remains fairly flat.**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "311d3475",
+   "id": "a89be542",
    "metadata": {},
    "outputs": [],
    "source": []
