Added more markdown comments.

--- a/nhl_exercise.ipynb
+++ b/nhl_exercise.ipynb
@@ -3622,13 +3622,15 @@
    "id": "745a4aef",
    "metadata": {},
    "source": [
-    "**It looks like RBS:GS has remained relatively stable through all the seasons based on the box and violin plots. We will run a smooth regression to observe if the mean RBS:GS curve remains fairly flat.**"
+    "**It looks like RBS:GS has remained relatively stable through all the seasons based on the box and violin plots. We also note the presence of a fairly consistent skew toward higher RBS:GS throughout the seasons, suggesting that teams frequently need to hold on to and play underperforming goalies because it is difficult to find a serviceable one.** \n",
+    "\n",
+    "**We will run a smooth regression to observe if the mean RBS:GS curve remains fairly flat.**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a89be542",
+   "id": "545fb1c6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3645,6 +3647,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "771d136b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2f92579",
+   "metadata": {},
+   "source": [
+    "**We do not presently have access to cumulative minutes or seasons played, but what about the interaction between Age and Minutes? Is there a correlation between Age * Minute and RBS:GS that points to older players having trouble shouldering higher per-season minutes?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13b40fc3",
    "metadata": {},
    "outputs": [],
    "source": []
