Fixed some sentences and typos in markdown comment cells.

--- a/nhl_exercise.ipynb
+++ b/nhl_exercise.ipynb
@@ -6704,7 +6704,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2aa6a32a",
+   "id": "27a7abd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6715,7 +6715,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c0f41dd1",
+   "id": "4835a3f5",
    "metadata": {},
    "outputs": [
     {
@@ -6736,7 +6736,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "78eaa6ef",
+   "id": "72d412c8",
    "metadata": {},
    "outputs": [
     {
@@ -6777,7 +6777,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "edeed993",
+   "id": "fcee414e",
    "metadata": {},
    "outputs": [
     {
@@ -6799,7 +6799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89ef524b",
+   "id": "aa067298",
    "metadata": {},
    "source": [
     "$0.07332022727199881 > 0.05$, so we actually fail to reject the null hypothesis and conclude that $\\textrm{RBS}\\%$ is not normally distributed. Next, we will also try a Shapiro-Wilk test on the same 2022 $\\textrm{RBS}\\%$ data with the same $\\alpha$."
@@ -6808,7 +6808,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "10df4b99",
+   "id": "f30787b3",
    "metadata": {},
    "outputs": [
     {
@@ -6830,7 +6830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a59f2c0f",
+   "id": "dff6831a",
    "metadata": {},
    "source": [
     "Again, 0.05 is exceeded, so we fail to reject the null hypothesis. For completionists' sake, we will print the Lilliefors and Shapiro-Wilk p-values for all of the since-2008 seasons in our scope."
@@ -6839,7 +6839,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0adc8cd4",
+   "id": "9ceb3a5e",
    "metadata": {
     "scrolled": true
    },
@@ -6923,7 +6923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f12afc63",
+   "id": "db056601",
    "metadata": {},
    "source": [
     "The Lilliefors test appears is a little more sensitive, as the null is rejected for the Lilliefors more frequently than for the Shapiro-Wilk. The Shapiro-Wilk test only rejects the null in 2015 and 2020 and never rejects alone without agreement from the Lilliefors test."
@@ -6966,7 +6966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c29c5a91",
+   "id": "91be3b6b",
    "metadata": {},
    "source": [
     "Indeed, ugly and not informative! Let us try with `Age` finally as the x-axis."
@@ -6975,7 +6975,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7260afc5",
+   "id": "b9da9869",
    "metadata": {},
    "outputs": [
     {
@@ -7001,7 +7001,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbdd34e3",
+   "id": "86d182ad",
    "metadata": {},
    "source": [
     "Still messy. What about a scatter (not expecting a panacea)?"
@@ -7010,7 +7010,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ecb91281",
+   "id": "0246f811",
    "metadata": {},
    "outputs": [
     {
@@ -7036,7 +7036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59300713",
+   "id": "ad624ca8",
    "metadata": {},
    "source": [
     "Okay, two more visual tests -- one to check out how goalie age is distributed through the seasons, and another one to check out how $\\textrm{RBS}\\%$ is distributed by age.  "
@@ -7045,7 +7045,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c5fdfb8e",
+   "id": "652cdd09",
    "metadata": {},
    "outputs": [
     {
@@ -7073,7 +7073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5572d571",
+   "id": "0e252ada",
    "metadata": {},
    "source": [
     "It would seem that the mean season goalie age reasonably sits between 25 and 30 and remains relatively stable from year to year."
@@ -7082,7 +7082,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e57a82b6",
+   "id": "e5266d5e",
    "metadata": {},
    "outputs": [
     {
@@ -7110,7 +7110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5de79e58",
+   "id": "268c9ad6",
    "metadata": {},
    "source": [
     "Disregarding the lower sample size and variance ages, $\\textrm{RBS}\\%$ also appears fairly through different ages and that it does not obviously visually increase with older age.  "
@@ -7118,7 +7118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb10d371",
+   "id": "ceba27ba",
    "metadata": {},
    "source": [
     "Well, we now pivot from visual qualitative exploration and turn to frequentist methods for a first quantitative regression pass to see how quantitatively influential `Age` and potentially some other explanatory variables and corresponding interactions are on $\\textrm{RBS}\\%$ or related response variables (again, we unfortunately do not have immediate access to cumulative minutes or seasons played).\n",
@@ -7136,7 +7136,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bbd176b0",
+   "id": "1a5d1097",
    "metadata": {},
    "outputs": [
     {
@@ -7209,7 +7209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e585c1e",
+   "id": "c5120b65",
    "metadata": {},
    "source": [
     "We have created in a new column for our pandas DataFrame storing the nudged $\\textrm{RBS}\\%$ values. Now, we are ready to try a simple beta regression, first with a single predictor. For simplicity's sake, we will use identity functions for our mean and precision links. "
@@ -7218,7 +7218,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "42e18f15",
+   "id": "2f62d530",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7229,7 +7229,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "7cdaa2e3",
+   "id": "9e27e771",
    "metadata": {},
    "outputs": [
     {
@@ -7242,7 +7242,7 @@
       "Model:                             BetaModel   AIC:                            -2108.\n",
       "Method:                   Maximum Likelihood   BIC:                            -2093.\n",
       "Date:                       Mon, 26 Sep 2022                                         \n",
-      "Time:                               20:54:08                                         \n",
+      "Time:                               21:05:19                                         \n",
       "No. Observations:                        822                                         \n",
       "Df Residuals:                            819                                         \n",
       "Df Model:                                  2                                         \n",
@@ -7265,16 +7265,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df14c12a",
+   "id": "6ed7ade2",
    "metadata": {},
    "source": [
-    "It appears that `Age` does correspond to a small, but significant coefficient under an $\\alpha = 0.5$ threshold, indicating that under this model,  Let us try regressing with one more model for now that includes `MIN` and an `Age:MIN` interaction terms."
+    "It appears that `Age` does correspond to a small, but significant positive coefficient under an $\\alpha = 0.5$ threshold, indicating that under this model at least, season $\\textrm{RBS}\\%$ tends to (modestly) increase as goalies get older. Let us try regressing with one more model for now that includes `MIN` and an `Age:MIN` interaction terms."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "554c9b64",
+   "id": "21a2fa94",
    "metadata": {},
    "outputs": [
     {
@@ -7287,7 +7287,7 @@
       "Model:                             BetaModel   AIC:                            -2110.\n",
       "Method:                   Maximum Likelihood   BIC:                            -2087.\n",
       "Date:                       Mon, 26 Sep 2022                                         \n",
-      "Time:                               20:54:08                                         \n",
+      "Time:                               21:05:20                                         \n",
       "No. Observations:                        822                                         \n",
       "Df Residuals:                            817                                         \n",
       "Df Model:                                  4                                         \n",
@@ -7312,16 +7312,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b3c2251",
+   "id": "405afa3a",
    "metadata": {},
    "source": [
-    "`Age` still corresponds to a significant positive slope, but coefficients corresponding to `MIN` and the interaction `Age:MIN` are not significant. "
+    "`Age` still corresponds to a significant positive slope, but coefficients corresponding to `MIN` and the interaction `Age:MIN` are not significant. Additionally, while being the tiniest bit better, the BIC, AIC, and log-likelihood metrics of this second model are not different enough from the first one to suggest that the addition of explanatory variables was worthwhile."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb2da813",
+   "id": "5550a2fb",
    "metadata": {},
    "outputs": [],
    "source": []
