Corrected misspelling in markdown cell.

--- a/nhl_exercise.ipynb
+++ b/nhl_exercise.ipynb
@@ -18,7 +18,7 @@
    "id": "9a6ba398",
    "metadata": {},
    "source": [
-    "Quality Start (QS) and Really Bad Start (RBS) metrics to quantify goalie performance were developed by Rob Bollman of the Hockey Abstract. Bollman defines a QS as a situation in which a starting goalie's ultimate game save percentage meets or exceeds the overall season mean save percentage. Hence, the bar for earning a QS changes from season to season and QS results can only be finalized after a regular season conclusion. On the other hand, Bollman defined a constant threshold of a less than 85% game save percentage to assign a starting goalie an RBS. Note that QS + RBS != total Games Started (GS) because of the usual gap between 85% and the season mean percentage.\n",
+    "Quality Start (QS) and Really Bad Start (RBS) metrics to quantify goalie performance were developed by Rob Vollman of the Hockey Abstract. Bollman defines a QS as a situation in which a starting goalie's ultimate game save percentage meets or exceeds the overall season mean save percentage. Hence, the bar for earning a QS changes from season to season and QS results can only be finalized after a regular season conclusion. On the other hand, Bollman defined a constant threshold of a less than 85% game save percentage to assign a starting goalie an RBS. Note that QS + RBS != total Games Started (GS) because of the usual gap between 85% and the season mean percentage.\n",
     "\n",
     "This time, I am interested in looking at the influence of goalie age (known henceforth as Age) and \"wear-and-tear\" on RBS measurements in particular from season to season. We will evaluate season RBS:GS ratios (also to be known as $\\textrm{RBS}\\%$), noting that higher ratios reflect more negatively on goalies. In this simpler exercise, I will set the season RBS:GS ratio as a response/dependent/endogenous/target/etc. variable. More specifically, I might transform $\\textrm{RBS}\\%$ to a log-odds response as $\\textrm{RBS}\\% / (1 - \\textrm{RBS}\\%)$ and then do an ordinary least squares (OLS) regression, do a general linear model (GLM) regression with a logit link function, or conduct a beta regression based on untransformed $\\textrm{RBS}\\%$. I will use Age as an explanatory/independent/exogenous/feature/etc. variable. I generally hypothesize that as Age increases, the season RBS:GS ratio will also increase.\n",
     "\n",
@@ -6704,7 +6704,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "27a7abd8",
+   "id": "f0c0ca26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6715,7 +6715,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4835a3f5",
+   "id": "d4415bff",
    "metadata": {},
    "outputs": [
     {
@@ -6736,7 +6736,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "72d412c8",
+   "id": "b21e20ed",
    "metadata": {},
    "outputs": [
     {
@@ -6777,7 +6777,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "fcee414e",
+   "id": "3c3dd099",
    "metadata": {},
    "outputs": [
     {
@@ -6799,7 +6799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa067298",
+   "id": "cdba07ca",
    "metadata": {},
    "source": [
     "$0.07332022727199881 > 0.05$, so we actually fail to reject the null hypothesis and conclude that $\\textrm{RBS}\\%$ is not normally distributed. Next, we will also try a Shapiro-Wilk test on the same 2022 $\\textrm{RBS}\\%$ data with the same $\\alpha$."
@@ -6808,7 +6808,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f30787b3",
+   "id": "46e0d3ec",
    "metadata": {},
    "outputs": [
     {
@@ -6830,7 +6830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dff6831a",
+   "id": "a07344a2",
    "metadata": {},
    "source": [
     "Again, 0.05 is exceeded, so we fail to reject the null hypothesis. For completionists' sake, we will print the Lilliefors and Shapiro-Wilk p-values for all of the since-2008 seasons in our scope."
@@ -6839,7 +6839,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9ceb3a5e",
+   "id": "531f48c0",
    "metadata": {
     "scrolled": true
    },
@@ -6923,7 +6923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db056601",
+   "id": "ac393302",
    "metadata": {},
    "source": [
     "The Lilliefors test appears is a little more sensitive, as the null is rejected for the Lilliefors more frequently than for the Shapiro-Wilk. The Shapiro-Wilk test only rejects the null in 2015 and 2020 and never rejects alone without agreement from the Lilliefors test."
@@ -6966,7 +6966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91be3b6b",
+   "id": "50684ba2",
    "metadata": {},
    "source": [
     "Indeed, ugly and not informative! Let us try with `Age` finally as the x-axis."
@@ -6975,7 +6975,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b9da9869",
+   "id": "1f1652e7",
    "metadata": {},
    "outputs": [
     {
@@ -7001,7 +7001,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86d182ad",
+   "id": "0dc5b2a2",
    "metadata": {},
    "source": [
     "Still messy. What about a scatter (not expecting a panacea)?"
@@ -7010,7 +7010,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0246f811",
+   "id": "43979a85",
    "metadata": {},
    "outputs": [
     {
@@ -7036,7 +7036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad624ca8",
+   "id": "f4c6fde7",
    "metadata": {},
    "source": [
     "Okay, two more visual tests -- one to check out how goalie age is distributed through the seasons, and another one to check out how $\\textrm{RBS}\\%$ is distributed by age.  "
@@ -7045,7 +7045,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "652cdd09",
+   "id": "cd325d7b",
    "metadata": {},
    "outputs": [
     {
@@ -7073,7 +7073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e252ada",
+   "id": "ea0c5e84",
    "metadata": {},
    "source": [
     "It would seem that the mean season goalie age reasonably sits between 25 and 30 and remains relatively stable from year to year."
@@ -7082,7 +7082,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e5266d5e",
+   "id": "ced8ba3e",
    "metadata": {},
    "outputs": [
     {
@@ -7110,7 +7110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "268c9ad6",
+   "id": "1e11dd07",
    "metadata": {},
    "source": [
     "Disregarding the lower sample size and variance ages, $\\textrm{RBS}\\%$ also appears fairly through different ages and that it does not obviously visually increase with older age.  "
@@ -7118,7 +7118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceba27ba",
+   "id": "ad6e61c9",
    "metadata": {},
    "source": [
     "Well, we now pivot from visual qualitative exploration and turn to frequentist methods for a first quantitative regression pass to see how quantitatively influential `Age` and potentially some other explanatory variables and corresponding interactions are on $\\textrm{RBS}\\%$ or related response variables (again, we unfortunately do not have immediate access to cumulative minutes or seasons played).\n",
@@ -7136,7 +7136,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1a5d1097",
+   "id": "aabb3e46",
    "metadata": {},
    "outputs": [
     {
@@ -7209,7 +7209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5120b65",
+   "id": "304467aa",
    "metadata": {},
    "source": [
     "We have created in a new column for our pandas DataFrame storing the nudged $\\textrm{RBS}\\%$ values. Now, we are ready to try a simple beta regression, first with a single predictor. For simplicity's sake, we will use identity functions for our mean and precision links. "
@@ -7218,7 +7218,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2f62d530",
+   "id": "2b462233",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7229,7 +7229,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "9e27e771",
+   "id": "fe4607f1",
    "metadata": {},
    "outputs": [
     {
@@ -7265,7 +7265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ed7ade2",
+   "id": "51f21d22",
    "metadata": {},
    "source": [
     "It appears that `Age` does correspond to a small, but significant positive coefficient under an $\\alpha = 0.5$ threshold, indicating that under this model at least, season $\\textrm{RBS}\\%$ tends to (modestly) increase as goalies get older. Let us try regressing with one more model for now that includes `MIN` and an `Age:MIN` interaction terms."
@@ -7274,7 +7274,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "21a2fa94",
+   "id": "9ee49d7e",
    "metadata": {},
    "outputs": [
     {
@@ -7312,7 +7312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "405afa3a",
+   "id": "9d281100",
    "metadata": {},
    "source": [
     "`Age` still corresponds to a significant positive slope, but coefficients corresponding to `MIN` and the interaction `Age:MIN` are not significant. Additionally, while being the tiniest bit better, the BIC, AIC, and log-likelihood metrics of this second model are not different enough from the first one to suggest that the addition of explanatory variables was worthwhile."
@@ -7321,7 +7321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5550a2fb",
+   "id": "3286dcdc",
    "metadata": {},
    "outputs": [],
    "source": []
