--- a/nhl_exercise.ipynb
+++ b/nhl_exercise.ipynb
@@ -6704,7 +6704,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e715643e",
+   "id": "c0c641bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6715,7 +6715,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e7faaf35",
+   "id": "a1f8a15d",
    "metadata": {},
    "outputs": [
     {
@@ -6736,7 +6736,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2a03e253",
+   "id": "d671a076",
    "metadata": {},
    "outputs": [
     {
@@ -6777,7 +6777,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e9076f12",
+   "id": "12e58847",
    "metadata": {},
    "outputs": [
     {
@@ -6799,7 +6799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c2ccde5",
+   "id": "d8df5087",
    "metadata": {},
    "source": [
     "$0.07332022727199881 > 0.05$, so we actually fail to reject the null hypothesis and conclude that $\\textrm{RBS}\\%$ is not normally distributed. Next, we will also try a Shapiro-Wilk test on the same 2022 $\\textrm{RBS}\\%$ data with the same $\\alpha$."
@@ -6808,7 +6808,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "13110e0f",
+   "id": "ecd24ac7",
    "metadata": {},
    "outputs": [
     {
@@ -6830,7 +6830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1cfcd2a",
+   "id": "47c9d9eb",
    "metadata": {},
    "source": [
     "Again, 0.05 is exceeded, so we fail to reject the null hypothesis. For completionists' sake, we will print the Lilliefors and Shapiro-Wilk p-values for all of the since-2008 seasons in our scope."
@@ -6839,7 +6839,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "23e8a8a3",
+   "id": "f40b7b70",
    "metadata": {
     "scrolled": true
    },
@@ -6923,7 +6923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d0758fe",
+   "id": "1fa5c374",
    "metadata": {},
    "source": [
     "The Lilliefors test appears is a little more sensitive, as the null is rejected for the Lilliefors more frequently than for the Shapiro-Wilk. The Shapiro-Wilk test only rejects the null in 2015 and 2020 and never rejects alone without agreement from the Lilliefors test."
@@ -6966,7 +6966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fc173ed",
+   "id": "8ca535b2",
    "metadata": {},
    "source": [
     "Indeed, ugly and not informative! Let us try with `Age` finally as the x-axis."
@@ -6975,7 +6975,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d69e2c20",
+   "id": "11243a1a",
    "metadata": {},
    "outputs": [
     {
@@ -7001,7 +7001,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19ab17f4",
+   "id": "f7829dc4",
    "metadata": {},
    "source": [
     "Still messy. What about a scatter (not expecting a panacea)?"
@@ -7010,7 +7010,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b0645c5c",
+   "id": "c84f5ed3",
    "metadata": {},
    "outputs": [
     {
@@ -7036,7 +7036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9964682",
+   "id": "b84d6c34",
    "metadata": {},
    "source": [
     "Okay, two more visual tests -- one to check out how goalie age is distributed through the seasons, and another one to check out how $\\textrm{RBS}\\%$ is distributed by age.  "
@@ -7045,7 +7045,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b14e00a6",
+   "id": "8dcd8be0",
    "metadata": {},
    "outputs": [
     {
@@ -7073,7 +7073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c60a682f",
+   "id": "b22dae47",
    "metadata": {},
    "source": [
     "It would seem that the mean season goalie age reasonably sits between 25 and 30 and remains relatively stable from year to year."
@@ -7082,7 +7082,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "450539ee",
+   "id": "9eefb943",
    "metadata": {},
    "outputs": [
     {
@@ -7110,15 +7110,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6e1854b",
+   "id": "78735f64",
    "metadata": {},
    "source": [
-    "Disregarding the lower sample size and variance ages, $\\textrm{RBS}\\%$ also appears fairly through different ages and that it does not obviously visually increase with older age.  "
+    "Disregarding the lower sample size and variance age categories at the younger and older extremes, $\\textrm{RBS}\\%$ also appears fairly through different ages and that it does not obviously visually increase with older age.  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "256536cf",
+   "id": "1cf5fbdd",
    "metadata": {},
    "source": [
     "Well, we now pivot from visual qualitative exploration and turn to frequentist methods for a first quantitative regression pass to see how quantitatively influential `Age` and potentially some other explanatory variables and corresponding interactions are on $\\textrm{RBS}\\%$ or related response variables (again, we unfortunately do not have immediate access to cumulative minutes or seasons played).\n",
@@ -7136,7 +7136,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "dcf438b0",
+   "id": "93bfcce7",
    "metadata": {},
    "outputs": [
     {
@@ -7209,7 +7209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65ffcd1b",
+   "id": "c36228a8",
    "metadata": {},
    "source": [
     "We have created in a new column for our pandas DataFrame storing the nudged $\\textrm{RBS}\\%$ values. Now, we are ready to try a simple beta regression, first with a single predictor. For simplicity's sake, we will use identity functions for our mean and precision links. "
@@ -7218,7 +7218,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c3c48d81",
+   "id": "893c4224",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7229,7 +7229,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "89734e44",
+   "id": "6cb6ec99",
    "metadata": {},
    "outputs": [
     {
@@ -7265,7 +7265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9f7d81e",
+   "id": "c70bc340",
    "metadata": {},
    "source": [
     "It appears that `Age` does correspond to a small, but significant positive coefficient under an $\\alpha = 0.5$ threshold, indicating that under this model at least, season $\\textrm{RBS}\\%$ tends to (modestly) increase as goalies get older. Let us try regressing with one more model for now that includes `MIN` and an `Age:MIN` interaction terms."
@@ -7274,7 +7274,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d269124e",
+   "id": "9b26fdde",
    "metadata": {},
    "outputs": [
     {
@@ -7312,7 +7312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd373408",
+   "id": "56ff478e",
    "metadata": {},
    "source": [
     "`Age` still corresponds to a significant positive slope, but coefficients corresponding to `MIN` and the interaction `Age:MIN` are not significant. Additionally, while being the tiniest bit better, the BIC, AIC, and log-likelihood metrics of this second model are not different enough from the first one to suggest that the addition of explanatory variables was worthwhile."
@@ -7321,7 +7321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e70aeda5",
+   "id": "ba25f42a",
    "metadata": {},
    "outputs": [],
    "source": []
