--- a/nhl_exercise.ipynb
+++ b/nhl_exercise.ipynb
@@ -6704,7 +6704,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c0c641bc",
+   "id": "2ea93a1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6715,7 +6715,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a1f8a15d",
+   "id": "c1a59233",
    "metadata": {},
    "outputs": [
     {
@@ -6736,7 +6736,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d671a076",
+   "id": "d352f526",
    "metadata": {},
    "outputs": [
     {
@@ -6777,7 +6777,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "12e58847",
+   "id": "dc34d63c",
    "metadata": {},
    "outputs": [
     {
@@ -6799,7 +6799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8df5087",
+   "id": "edd85d6e",
    "metadata": {},
    "source": [
     "$0.07332022727199881 > 0.05$, so we actually fail to reject the null hypothesis and conclude that $\\textrm{RBS}\\%$ is not normally distributed. Next, we will also try a Shapiro-Wilk test on the same 2022 $\\textrm{RBS}\\%$ data with the same $\\alpha$."
@@ -6808,7 +6808,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ecd24ac7",
+   "id": "d56cb82d",
    "metadata": {},
    "outputs": [
     {
@@ -6830,7 +6830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47c9d9eb",
+   "id": "e2f5c621",
    "metadata": {},
    "source": [
     "Again, 0.05 is exceeded, so we fail to reject the null hypothesis. For completionists' sake, we will print the Lilliefors and Shapiro-Wilk p-values for all of the since-2008 seasons in our scope."
@@ -6839,7 +6839,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f40b7b70",
+   "id": "1c0c6f7f",
    "metadata": {
     "scrolled": true
    },
@@ -6923,7 +6923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fa5c374",
+   "id": "138d930e",
    "metadata": {},
    "source": [
     "The Lilliefors test appears is a little more sensitive, as the null is rejected for the Lilliefors more frequently than for the Shapiro-Wilk. The Shapiro-Wilk test only rejects the null in 2015 and 2020 and never rejects alone without agreement from the Lilliefors test."
@@ -6966,7 +6966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ca535b2",
+   "id": "5c257fba",
    "metadata": {},
    "source": [
     "Indeed, ugly and not informative! Let us try with `Age` finally as the x-axis."
@@ -6975,7 +6975,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "11243a1a",
+   "id": "7bdb5530",
    "metadata": {},
    "outputs": [
     {
@@ -7001,7 +7001,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7829dc4",
+   "id": "e5f33a85",
    "metadata": {},
    "source": [
     "Still messy. What about a scatter (not expecting a panacea)?"
@@ -7010,7 +7010,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c84f5ed3",
+   "id": "566be564",
    "metadata": {},
    "outputs": [
     {
@@ -7036,7 +7036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b84d6c34",
+   "id": "ec95cbec",
    "metadata": {},
    "source": [
     "Okay, two more visual tests -- one to check out how goalie age is distributed through the seasons, and another one to check out how $\\textrm{RBS}\\%$ is distributed by age.  "
@@ -7045,7 +7045,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "8dcd8be0",
+   "id": "e6f45b84",
    "metadata": {},
    "outputs": [
     {
@@ -7073,7 +7073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b22dae47",
+   "id": "e61011ce",
    "metadata": {},
    "source": [
     "It would seem that the mean season goalie age reasonably sits between 25 and 30 and remains relatively stable from year to year."
@@ -7082,7 +7082,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9eefb943",
+   "id": "23fdb785",
    "metadata": {},
    "outputs": [
     {
@@ -7110,15 +7110,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78735f64",
+   "id": "96cefc43",
    "metadata": {},
    "source": [
-    "Disregarding the lower sample size and variance age categories at the younger and older extremes, $\\textrm{RBS}\\%$ also appears fairly through different ages and that it does not obviously visually increase with older age.  "
+    "Disregarding the lower sample size and variance age categories at the younger and older extremes, mean $\\textrm{RBS}\\%$ also appears fairly stable through different ages and does not obviously explode with older age. This plot also suggests that since the 2008 season, goalies tend to break into the league in their early 20s and many retire around 38.   "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1cf5fbdd",
+   "id": "674772c3",
    "metadata": {},
    "source": [
     "Well, we now pivot from visual qualitative exploration and turn to frequentist methods for a first quantitative regression pass to see how quantitatively influential `Age` and potentially some other explanatory variables and corresponding interactions are on $\\textrm{RBS}\\%$ or related response variables (again, we unfortunately do not have immediate access to cumulative minutes or seasons played).\n",
@@ -7136,7 +7136,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "93bfcce7",
+   "id": "a8400744",
    "metadata": {},
    "outputs": [
     {
@@ -7209,7 +7209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c36228a8",
+   "id": "754af03d",
    "metadata": {},
    "source": [
     "We have created in a new column for our pandas DataFrame storing the nudged $\\textrm{RBS}\\%$ values. Now, we are ready to try a simple beta regression, first with a single predictor. For simplicity's sake, we will use identity functions for our mean and precision links. "
@@ -7218,7 +7218,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "893c4224",
+   "id": "f237aec0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7229,7 +7229,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6cb6ec99",
+   "id": "c08b9201",
    "metadata": {},
    "outputs": [
     {
@@ -7265,7 +7265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c70bc340",
+   "id": "662d8dd2",
    "metadata": {},
    "source": [
     "It appears that `Age` does correspond to a small, but significant positive coefficient under an $\\alpha = 0.5$ threshold, indicating that under this model at least, season $\\textrm{RBS}\\%$ tends to (modestly) increase as goalies get older. Let us try regressing with one more model for now that includes `MIN` and an `Age:MIN` interaction terms."
@@ -7274,7 +7274,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "9b26fdde",
+   "id": "332ec52b",
    "metadata": {},
    "outputs": [
     {
@@ -7312,7 +7312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56ff478e",
+   "id": "a1704a7f",
    "metadata": {},
    "source": [
     "`Age` still corresponds to a significant positive slope, but coefficients corresponding to `MIN` and the interaction `Age:MIN` are not significant. Additionally, while being the tiniest bit better, the BIC, AIC, and log-likelihood metrics of this second model are not different enough from the first one to suggest that the addition of explanatory variables was worthwhile."
@@ -7321,7 +7321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba25f42a",
+   "id": "9f8a4617",
    "metadata": {},
    "outputs": [],
    "source": []
