Edited comments to reflect that post-season games are included in the data.

--- a/nhl_exercise.ipynb
+++ b/nhl_exercise.ipynb
@@ -18,7 +18,7 @@
    "id": "9a6ba398",
    "metadata": {},
    "source": [
-    "Quality Start (QS) and Really Bad Start (RBS) metrics to quantify goalie performance were developed by Rob Vollman of the Hockey Abstract. Vollman defines a QS as a situation in which a starting goalie's ultimate game save percentage meets or exceeds the overall season mean save percentage. Hence, the bar for earning a QS changes from season to season and QS results can only be finalized after a regular season conclusion. On the other hand, Vollman defined a constant threshold of a less than 85% game save percentage to assign a starting goalie an RBS. Note that QS + RBS != total Games Started (GS) because of the usual gap between 85% and the season mean percentage.\n",
+    "Quality Start (QS) and Really Bad Start (RBS) metrics to quantify goalie performance were developed by Rob Vollman of the Hockey Abstract. Vollman defines a QS as a situation in which a starting goalie's ultimate game save percentage meets or exceeds the overall season mean save percentage. Hence, the bar for earning a QS changes from season to season and QS results can only be finalized after a season conclusion. On the other hand, Vollman defined a constant threshold of a less than 85% game save percentage to assign a starting goalie an RBS. Note that QS + RBS != total Games Started (GS) because of the usual gap between 85% and the season mean percentage.\n",
     "\n",
     "This time, I am interested in looking at the influence of goalie age (known henceforth as Age) and \"wear-and-tear\" on RBS measurements in particular from season to season. We will evaluate season RBS:GS ratios (also to be known as $\\textrm{RBS}\\%$), noting that higher ratios reflect more negatively on goalies. In this simpler exercise, I will set the season RBS:GS ratio as a response/dependent/endogenous/target/etc. variable. More specifically, I might transform $\\textrm{RBS}\\%$ to a log-odds response as $\\textrm{RBS}\\% / (1 - \\textrm{RBS}\\%)$ and then do an ordinary least squares (OLS) regression, do a general linear model (GLM) regression with a logit link function, or conduct a beta regression based on untransformed $\\textrm{RBS}\\%$. I will use Age as an explanatory/independent/exogenous/feature/etc. variable. I generally hypothesize that as Age increases, the season RBS:GS ratio will also increase.\n",
     "\n",
@@ -1882,7 +1882,7 @@
    "id": "c56e1f2d",
    "metadata": {},
    "source": [
-    "We need to account for goalies traded or waived during the regular season that played on multiple teams. These goalies are redundantly listed per season with individual teams capturing their team statistics and under the team label `\"TOT\"`, which captures their entire season statistics."
+    "We need to account for goalies traded or waived during the season that played on multiple teams. These goalies are redundantly listed per season with individual teams capturing their team statistics and under the team label `\"TOT\"`, which captures their entire season statistics."
    ]
   },
   {
